# rstudio-freebsd

./: INSTALL
cmake/modules/: FindLibR.cmake
dependencies/common/: install-boost  install-common  install-dictionaries  install-gwt  install-mathjax
dependencies/freebsd/: install-dependencies-freebsd
package/: CMakeLists.txt
src/cpp/core/: Backtrace.cpp  CMakeLists.txt
src/cpp/core/include/core/r_util/: RTokenizer.hpp  RVersionInfo.hpp
src/cpp/core/r_util/: RSessionContext.cpp  RVersionsPosix.cpp
src/cpp/core/system/: PosixChildProcess.cpp  PosixSched.cpp  PosixSystem.cpp
src/cpp/server/: CMakeLists.txt
src/cpp/session/: SessionMain.cpp
